--- a/Pre-entrega7+PerezFortunato.html
+++ b/Pre-entrega7+PerezFortunato.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
@@ -57,6 +58,22 @@
             <div class="estilo1">
                 <button id="save">Guardar</button>
             </div>
+
+            <div> 
+            <h4> Dimensiones de Canchas</h4> 
+            <div class="estilo1">
+                <button id="b">Boca</button>
+            </div>
+
+            <div class="estilo1">
+                <button id="r">River</button>
+            </div>
+
+            <div class="estilo1">
+                <button id="sl">San Lorenzo</button>
+            </div>
+            </div>
+
           </div>
         </div>
 
